syntax="proto3";

option go_package = "./proto";

package greet_service;

service GreetService {
  rpc SayHello (NoParams) returns (HelloResponse);

  rpc SayHelloServerStream (NamesList) returns (stream HelloResponse);

  rpc SayHelloClientStream (stream NamesList) returns (MessageList);

  rpc SayHelloBiDirectionalStream (stream HelloRequest) returns (stream HelloResponse);
}

message NoParams {};

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message NamesList {
  repeated string names = 1;
}

message MessageList {
  repeated string messages = 1;
}